gatekeeper.sh/policies/k8srequiredlabels/good-namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
 name: mynamespace
 labels:
  owner: amit
